full lake, island, and low flow removal - increased performance

--- a/environment.yml
+++ b/environment.yml
@@ -3,8 +3,8 @@ channels:
 - conda-forge
 - defaults
 dependencies:
-  - python=3.11
-  - geopandas
+  - python>=3.11
+  - geopandas>=1.0
   - netcdf4
   - numpy
   - pandas
